--- a/web_controller/public/stylesheets/style.css
+++ b/web_controller/public/stylesheets/style.css
@@ -6,3 +6,31 @@ body {
 a {
   color: #00B7FF;
 }
+
+td {
+  border: 1px solid black;
+}
+
+.rotate90 {
+  transform: rotate(90deg);
+}
+
+.rotate180 {
+  transform: rotate(180deg);
+}
+
+.rotate270 {
+  transform: rotate(270deg);
+}
+
+.controllerTable {
+  max-width: 300px;
+  width: 50%;
+  margin: auto;
+}
+
+.boxed {
+  width: 100px;
+  height: 100px;
+  border: 1px solid black;
+}
