--- a/web_controller/views/index.ejs
+++ b/web_controller/views/index.ejs
@@ -3,35 +3,7 @@
 <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <style>
-        td {
-            border: 1px solid black;
-        }
-
-        .rotate90 {
-            transform: rotate(90deg);
-        }
-
-        .rotate180 {
-            transform: rotate(180deg);
-        }
-
-        .rotate270 {
-            transform: rotate(270deg);
-        }
-
-        .controllerTable {
-            max-width: 300px;
-            width: 50%;
-            margin: auto;
-        }
-
-        .boxed {
-            width: 100px;
-            height: 100px;
-            border: 1px solid black;
-        }
-    </style>
+    <style></style>
 </head>
 <body>
     <h1><%= title %></h1>
