--- a/web_controller/views/index.ejs
+++ b/web_controller/views/index.ejs
@@ -19,7 +19,7 @@
                 //     document.getElementById("demo").innerHTML = this.responseText;
                 // }
             };
-            xhttp.open("POST", "demo_post.asp", true);
+            xhttp.open("POST", "user", true);
             xhttp.send();
         }
     </script>
