--- a/web_controller/views/index.ejs
+++ b/web_controller/views/index.ejs
@@ -34,7 +34,7 @@
         <tr>
             <td></td>
             <td>
-                <a href="" alt="UP">
+                <a href="" alt="UP" onclick="loadDoc()">
                     <img src="images/Arrow.png">
                     <!-- <div class="boxed"></div> -->
                 </a>
