--- a/web_controller/views/index.ejs
+++ b/web_controller/views/index.ejs
@@ -34,10 +34,11 @@
         <tr>
             <td></td>
             <td>
-                <a href="" alt="UP" onclick="loadDoc()">
+                <input type="image" src="images/Arrow.png" onclick="loadDoc()" >
+                <!-- <a href="" alt="UP" onclick="loadDoc()">
                     <img src="images/Arrow.png">
                     <!-- <div class="boxed"></div> -->
-                </a>
+                </a> -->
             </td>
             <td></td>
         </tr>
