--- a/web_controller/views/index.ejs
+++ b/web_controller/views/index.ejs
@@ -35,25 +35,19 @@
             <td></td>
             <td>
                 <input type="image" src="images/Arrow.png" onclick="loadDoc()" >
-                <!-- <a href="" alt="UP" onclick="loadDoc()">
-                    <img src="images/Arrow.png">
-                    <!-- <div class="boxed"></div> -->
-                </a> -->
             </td>
             <td></td>
         </tr>
         <tr>
             <td>
                 <a href="" alt="LEFT">
-                    <img class="rotate270" src="images/Arrow.png">
-                    <!-- <div class="boxed"></div> -->
+                    <input type="image" src="images/Arrow.png" class="rotate270" onclick="loadDoc()" >
                 </a>
             </td>
             <td></td>
             <td>
                 <a href="" alt="RIGHT">
-                    <img class="rotate90" src="images/Arrow.png">
-                    <!-- <div class="boxed"></div> -->
+                    <input type="image" src="images/Arrow.png" class="rotate90" onclick="loadDoc()" >
                 </a>
             </td>
         </tr>
@@ -61,8 +55,7 @@
             <td></td>
             <td>
                 <a href="" alt="DOWN">
-                    <img class="rotate180" src="images/Arrow.png">
-                    <!-- <div class="boxed"></div> -->
+                    <input type="image" src="images/Arrow.png" class="rotate180" onclick="loadDoc()" >
                 </a>
             </td>
             <td></td>
