--- a/web_controller/views/index.ejs
+++ b/web_controller/views/index.ejs
@@ -14,7 +14,7 @@
     <button type="button" onclick="loadDoc()">Request data</button>
     <p id="demo"></p>
     <script>
-        Window.addEventListener('keydown', function (event) {
+        window.addEventListener('keydown', function (event) {
             switch (event.key) {
                 case "ArrowLeft":
                     moveLeft();
