--- a/web_controller/views/index.ejs
+++ b/web_controller/views/index.ejs
@@ -17,15 +17,19 @@
         window.addEventListener('keydown', function (event) {
             switch (event.key) {
                 case "ArrowLeft":
+                case "a":
                     moveLeft();
                     break;
                 case "ArrowRight":
+                case "d":
                     moveRight();
                     break;
                 case "ArrowUp":
+                case "w":
                     moveForward();
                     break;
                 case "ArrowDown":
+                case "s":
                     moveDown();
                     break;
             }
