--- a/web_controller/views/index.ejs
+++ b/web_controller/views/index.ejs
@@ -14,29 +14,53 @@
     <button type="button" onclick="loadDoc()">Request data</button>
     <p id="demo"></p>
     <script>
-        window.addEventListener('keypress', function (event) {
+        window.addEventListener('keydown', function (event) {
             if (event.defaultPrevented) {
                 return; // Do nothing if event already handled
             }
             switch (event.code) {
-                case "ArrowLeft":
                 case "KeyA":
+                case "ArrowLeft":
                     moveLeft();
                     break;
+                    case "KeyD":
                 case "ArrowRight":
-                case "KeyD":
                     moveRight();
                     break;
+                    case "KeyW":
                 case "ArrowUp":
-                case "KeyW":
                     moveForward();
                     break;
+                    case "KeyS":
                 case "ArrowDown":
-                case "KeyS":
                     moveDown();
                     break;
             }
         });
+
+        // window.addEventListener('keyup', function (event) {
+        //     if (event.defaultPrevented) {
+        //         return; // Do nothing if event already handled
+        //     }
+        //     switch (event.code) {
+        //         case "ArrowLeft":
+        //         case "KeyA":
+        //             moveLeft();
+        //             break;
+        //         case "ArrowRight":
+        //         case "KeyD":
+        //             moveRight();
+        //             break;
+        //         case "ArrowUp":
+        //         case "KeyW":
+        //             moveForward();
+        //             break;
+        //         case "ArrowDown":
+        //         case "KeyS":
+        //             moveDown();
+        //             break;
+        //     }
+        // });
 
         function loadDoc() {
             var xhttp = new XMLHttpRequest();
