--- a/web_controller/views/index.ejs
+++ b/web_controller/views/index.ejs
@@ -20,6 +20,8 @@
             }
             switch (event.code) {
                 case "KeyA":
+                    moveLeft();
+                    break;
                 case "ArrowLeft":
                     moveLeft();
                     break;
