--- a/web_controller/views/index.ejs
+++ b/web_controller/views/index.ejs
@@ -14,7 +14,7 @@
     <button type="button" onclick="loadDoc()">Request data</button>
     <p id="demo"></p>
     <script>
-        window.addEventListener('keyreverse', function (event) {
+        window.addEventListener('keydown', function (event) {
             if (event.defaultPrevented) {
                 return; // Do nothing if event already handled
             }
