--- a/web_controller/public/stylesheets/style.css
+++ b/web_controller/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
   /* padding: 50px; */
-  width: 100%;
-  height: 100%;
+  min-width: 100%;
+  min-height: 100%;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
