--- a/web_controller/views/index.ejs
+++ b/web_controller/views/index.ejs
@@ -55,16 +55,15 @@
             xhttp.onreadystatechange = function () {
                 if (this.readyState == 4 && this.status == 200) {
                     var radios = document.getElementsByName("speed");
-                    for (var i = 0; i < radios.length; i++ ) {
+                    for (var i = 0; i < radios.length; i++) {
                         if (radios[i].checked) {
                             speed = radios[i].value;
                         }
                     }
                 }
             };
-            var xhttp = new XMLHttpRequest();
-            xhttp.open("PUT", "speed", true);
-            xhttp.send(speed);
+            xhttp.open("PUT", "speed/" + speed, true);
+            xhttp.send();
         }
 
         function moveForward() {
