--- a/web_controller/views/index.ejs
+++ b/web_controller/views/index.ejs
@@ -27,7 +27,7 @@
                     moveForward();
                     break;
                 case "KeyS":
-                case "ArrowReverse":
+                case "ArrowDown":
                     moveReverse();
                     break;
             }
@@ -42,7 +42,7 @@
                 case "KeyW":
                 case "ArrowUp":
                 case "KeyS":
-                case "ArrowReverse":
+                case "ArrowDown":
                     stopMotor();
                     break;
             }
