--- a/web_controller/views/index.ejs
+++ b/web_controller/views/index.ejs
@@ -55,6 +55,7 @@
             xhttp.onreadystatechange = function () {
                 if (this.readyState == 4 && this.status == 200) {
                     var radios = document.getElementsByName("speed");
+                    console.log(radios)
                     for (var i = 0; i < radios.length; i++) {
                         if (radios[i].checked) {
                             speed = radios[i].value;
