--- a/web_controller/views/index.ejs
+++ b/web_controller/views/index.ejs
@@ -55,7 +55,6 @@
             xhttp.onreadystatechange = function () {
                 if (this.readyState == 4 && this.status == 200) {
                     var radios = document.getElementsByName("speed");
-                    console.log(radios);
                     for (var i = 0; i < radios.length; i++) {
                         if (radios[i].checked) {
                             speed = radios[i].value;
@@ -63,6 +62,7 @@
                     }
                 }
             };
+            console.log(speed);
             xhttp.open("PUT", "speed/" + speed, true);
             xhttp.send();
         }
