--- a/socket_controller/views/index.ejs
+++ b/socket_controller/views/index.ejs
@@ -106,12 +106,12 @@
     <button type="button" onclick="setSpeed()">Set Speed</button>
     <p id="demo"></p>
     <p>Speed:</p>
-    <input type="radio" id="option1" name="speed" value="100" checked="true">
-    <label for="option1">100</label><br>
-    <input type="radio" id="option2" name="speed" value="250">
-    <label for="option2">250</label><br>
-    <input type="radio" id="option3" name="speed" value="500">
-    <label for="option3">500</label><br>
+    <input type="radio" id="option1" name="speed" value="10" checked="true">
+    <label for="option1">10%</label><br>
+    <input type="radio" id="option2" name="speed" value="25">
+    <label for="option2">25%</label><br>
+    <input type="radio" id="option3" name="speed" value="50">
+    <label for="option3">50%</label><br>
     <table class="controllerTable">
         <tr>
             <td></td>
