--- a/socket_controller/views/index.ejs
+++ b/socket_controller/views/index.ejs
@@ -72,7 +72,7 @@
             document.getElementsByClassName('connectionStatus')[0].style.backgroundColor = color;
         }
 
-        function setSpeed() {
+        function sequence() {
             var speed;
             ws.send('sequence');
         }
