--- a/socket_controller/public/stylesheets/style.css
+++ b/socket_controller/public/stylesheets/style.css
@@ -1,7 +1,13 @@
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+  }
+}
+
 body {
   /* padding: 50px; */
-  min-width: 100%;
-  min-height: 100%;
+  /* min-width: 100vw;
+  min-height: 100vw; */
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
@@ -11,6 +17,15 @@ a {
 
 td {
   border: 1px solid black;
+}
+
+button {
+  width: 100px;
+  height: 50px;
+  background-color: #4CAF50; /* Green */
+  color: white;
+  text-align: center;
+  font-size: 16px;
 }
 
 .rotate90 {
@@ -25,16 +40,41 @@ td {
   transform: rotate(270deg);
 }
 
-.controllerTable {
+.tableContainer {
   max-width: 300px;
-  width: 50%;
-  margin: auto;
+  margin: 25px;
 }
 
-.boxed {
-  width: 100px;
-  height: 100px;
+.slideContainer {
   border: 1px solid black;
+  max-width: 300px;
+  margin: 25px;
+  /* width: 100%; */
+}
+
+.speedSlider {
+  -webkit-appearance: none; /*TODO slider-vertical; */
+  width: auto;
+  height: 25px;
+  width: 100%;
+  max-width: 250px;
+  background: #d3d3d3;
+}
+
+.speedSlider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  background: #4CAF50;
+  cursor: pointer;
+}
+
+.speedSlider:-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: #4CAF50;
+  cursor: pointer;
 }
 
 .connectionStatus {
