--- a/socket_controller/views/index.ejs
+++ b/socket_controller/views/index.ejs
@@ -162,24 +162,23 @@
         <tr>
             <td></td>
             <td>
-                <input type="image" src="images/Arrow.png" onclick="moveForward()" name="forwardButton">
+                <input type="image" src="images/Arrow.png"                  ontouchstart="moveForward()" ontouchend="stopMotor()" onmousedown="moveForward()" onmouseup="stopMotor()" name="forwardButton">
             </td>
             <td></td>
         </tr>
         <tr>
             <td>
-                <input type="image" src="images/Arrow.png" class="rotate270" onclick="moveLeft()" name="leftButton">
+                <input type="image" src="images/Arrow.png" class="rotate270" ontouchstart="moveForward()" ontouchend="stopMotor()" onmousedown="moveLeft()" onmouseup="stopMotor()" name="leftButton">
             </td>
             <td class="connectionStatus"></td>
             <td>
-                <input type="image" src="images/Arrow.png" class="rotate90" onclick="moveRight()" name="rightButton">
+                <input type="image" src="images/Arrow.png" class="rotate90" ontouchstart="moveForward()" ontouchend="stopMotor()" onmousedown="moveRight()" onmouseup="stopMotor()" name="rightButton">
             </td>
         </tr>
         <tr>
             <td></td>
             <td>
-                <input type="image" src="images/Arrow.png" class="rotate180" onclick="moveReverse()"
-                    name="reverseButton">
+                <input type="image" src="images/Arrow.png" class="rotate180" ontouchstart="moveForward()" ontouchend="stopMotor()" onmousedown="moveReverse()" onmouseup="stopMotor()" name="reverseButton">
             </td>
             <td></td>
         </tr>
