--- a/socket_controller/public/stylesheets/style.css
+++ b/socket_controller/public/stylesheets/style.css
@@ -19,13 +19,19 @@ td {
   border: 1px solid black;
 }
 
-button {
+.sequenceButton {
   width: 300px;
   height: 50px;
   background-color: #4CAF50; /* Green */
   color: white;
   text-align: center;
   font-size: 16px;
+}
+
+.controlButton {
+  width: 100px;
+  height: 100px;
+  background:url(../images/Arrow.png);
 }
 
 .rotate90 {
